# diag-lang

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
benches/: bench.rs
dev/: DIRECTIVES.md  NOTES.md  ROADMAP.md
docs/: API.md
docs/release/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v1.0.0.md
src/: diagnostic.rs  label.rs  lib.rs  render.rs  severity.rs
tests/: color.rs  frames.rs  properties.rs  rendering.rs
