# =============================================================================
#  R E P S   ·   diag-lang
# =============================================================================
[package]
name    = "diag-lang"
version = "0.2.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Diagnostics: error collection and caret-style source-annotated rendering."

# Keywords (5 max)
keywords = ["compiler", "diagnostics", "language", "errors"]

# Categories
categories = ["development-tools", "development-tools::debugging"]

# Links
homepage      = "https://github.com/jamesgober/diag-lang"
repository    = "https://github.com/jamesgober/diag-lang"
documentation = "https://docs.rs/diag-lang"

# Authors
authors = ["James Gober <me@jamesgober.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "diag_lang"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
default = ["std"]
std = ["span-lang/std", "source-lang/std"]


# DEPENDENCIES
# #################################
[dependencies]
# Byte positions and spans: the coordinate substrate a label points with.
span-lang = { version = "0.4", default-features = false }
# Source storage and the global position space a span is resolved against.
source-lang = { version = "1", default-features = false }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# BENCHMARKS
# #################################
[[bench]]
name    = "bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
